[gd_scene load_steps=4 format=2]

[ext_resource path="res://godot/scripts/testUser.gd" type="Script" id=1]
[ext_resource path="res://godot/scene/HomeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://godot/scripts/HomeTEST.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HomeButton" parent="." instance=ExtResource( 2 )]
margin_left = -3.31738
margin_top = 4.97423
margin_right = 72.6826
margin_bottom = 74.9742
script = ExtResource( 3 )

[node name="RunSimButton" type="Button" parent="."]
margin_left = 141.271
margin_top = 87.7835
margin_right = 350.271
margin_bottom = 180.783
text = "Run Simulator"

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 511.001
margin_top = 91.3791
margin_right = 844.001
margin_bottom = 187.379
text = "Change active ruleset"

[node name="StopSimButton" type="Button" parent="."]
margin_left = 143.0
margin_top = 230.46
margin_right = 337.0
margin_bottom = 321.46
text = "stop Simulator"

[connection signal="pressed" from="RunSimButton" to="." method="_on_RunSimButton_pressed"]
[connection signal="item_selected" from="OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="StopSimButton" to="." method="_on_StopSimButton_pressed"]
